• Fixed layout bugs with additions in footer

--- a/client/templates/footer/footer.styl
+++ b/client/templates/footer/footer.styl
@@ -100,8 +100,9 @@
         font-weight normal
         letter-spacing -.2px
         opacity .7
+        display inline
       &:not(:last-child):after
-        content "&#149;"
+        content "•"
         color #777
         margin 0 5px
         @media screen and (min-width: 768px)
